--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,38 @@
+* {
+	box-sizing: border-box;
+}
+
 body {
-  margin: 0;
-  font-family: 'Inter', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: "Inter", sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+nav {
+	display: flex;
+	align-items: center;
+	background-color: #21222a;
+	height: 90px;
+	padding: 30px 25px;
+}
+
+.nav--logo_text,
+.nav--title {
+	margin: 0;
+}
+
+.nav--logo_text {
+	margin-right: auto;
+	color: #61dafb;
+  font-weight: 700;
+}
+
+.nav--title {
+  color: #deebf8
+}
+
+.nav--icon {
+	height: 30px;
+	margin-right: 7px;
 }
